<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/tv_text_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="Note In a Pocket"
        android:textColor="@color/white"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/tv_text_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose_a_design_for_your_mood"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_green"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@color/green_light"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/tv_text_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tender_light_green"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_blue"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@color/blue_light"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/tv_text_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweet_sky_blue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_red"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@color/red_light"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/tv_text_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passionate_deep_red"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_yellow"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@color/yellow_light"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/tv_text_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_sunny_yellow"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_grey"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@color/grey_light"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/tv_text_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elegant_laconic_grey"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


</LinearLayout>